Fix header spacing on non-front pages

--- a/sass/innovation.sass
+++ b/sass/innovation.sass
@@ -147,6 +147,10 @@ $header-color-dark: mix($header-color, $blue3)
 			opacity: 0.5
 			line-height: 0.9
 
+#content
+	padding-top: $header-height
+
+
 
 $header-height: 240px
 
@@ -220,6 +224,7 @@ $nav-button-height: $nav-font-size * 16px * 2.3
 
 
 // Content
+
 #content 
 	padding-bottom: 4em
 	h1.title
